Fix filter overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -312,7 +312,7 @@ header .mobile {
 }
 
 #filters-section .image-container {
-	max-width: 25%;
+	overflow: hidden;
 }
 
 #filters-section .image-container img {
